@@ -1,6 +1,8 @@
 Changes in daemontools-encore-1.06
 ==================================
 
+Added options to svstat to control checking the log script service.
+
 Added -l option to svc to explicitly control the main service.
 
 Fixed race issuing svc commands to log and then main service.
